--- a/.env
+++ b/.env
@@ -1,6 +1,14 @@
-VITE_FIREBASE_API_KEY="AIzaSyDqdK7l4Q_BdPRL_nNvYoi4H50X-5xiRTY"
-VITE_FIREBASE_AUTH_DOMAIN="graphql-app-3e297.firebaseapp.com"
-VITE_FIREBASE_PROJECT_ID="graphql-app-3e297"
-VITE_FIREBASE_STORAGE_BUCKET="graphql-app-3e297.appspot.com"
-VITE_FIREBASE_MESSAGIN_SENDER_ID="333822290342"
-VITE_FIREBASE_APP_ID="1:333822290342:web:fb40e9bdc1ab6101684767"
+VITE_FIREBASE_API_KEY="AIzaSyD-0Zyj1pc4Ic3CWtuwHIrzPTAiz7e0-Do"
+VITE_FIREBASE_AUTH_DOMAIN="second-816e8.firebaseapp.com"
+VITE_FIREBASE_PROJECT_ID="second-816e8"
+VITE_FIREBASE_STORAGE_BUCKET="second-816e8.appspot.com"
+VITE_FIREBASE_MESSAGIN_SENDER_ID="781710633621"
+VITE_FIREBASE_APP_ID="1:781710633621:web:70c7578a93f6ad3dbf899c"
+
+
+ apiKey: "AIzaSyD-0Zyj1pc4Ic3CWtuwHIrzPTAiz7e0-Do",
+  authDomain: "second-816e8.firebaseapp.com",
+  projectId: "second-816e8",
+  storageBucket: "second-816e8.appspot.com",
+  messagingSenderId: "781710633621",
+  appId: "1:781710633621:web:70c7578a93f6ad3dbf899c"
