--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-redux": "^8.0.5",
+    "react-json-view-lite": "^0.9.5",
     "react-router-dom": "^6.11.0"
   },
   "devDependencies": {
