--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.13.2",
     "@reduxjs/toolkit": "^1.9.5",
     "firebase": "^9.21.0",
     "graphql": "^16.6.0",
@@ -24,11 +28,7 @@
     "react-i18next": "^12.2.2",
     "react-json-view-lite": "^0.9.5",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.11.0",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.2",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5"
+    "react-router-dom": "^6.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
